--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://lmsb2btest.wpengine.com" title="Full LMS powered by Partnership Cloud"></iframe>
+<iframe src="https://lmsb2btest.wpengine.com" title="Full LMS powered by Partnership Cloud" width="100%" height="800" style="border:none;"></iframe>
